create rudimentary framework for quiz in js, css, html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,84 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Course Suggest</title>
+    <title>Course Suggestions</title>
   </head>
+
+  <body>
+      <div class="container">
+        <h1>Which programming track fits you?</h1>
+
+        <form id="user-input">
+          <div class="form-group">
+
+        <h3>What fabric texture do you like?</h3>
+        <select class="form-control" id="answer">
+          <option value="2">Select</option>
+          <option>Silk</option>
+          <option>Suede</option>
+          <option>Polyester</option>
+        </select>
+
+        <h3>What type of demeanor do you like</h3>
+        <select class="form-control" id="answer">
+          <option value="2">Select</option>
+          <option>Stern</option>
+          <option>Sweet</option>
+          <option>Unhinged</option>
+        </select>
+
+        <h3>What kind of food do you like?</h3>
+        <select class="form-control" id="answer">
+          <option value="2">Select</option>
+          <option>Pig slop</option>
+          <option>Gourmet vittles</option>
+          <option>Candy</option>
+        </select>
+
+        <h3>What kind of animals do you like?</h3>
+        <select class="form-control" id="right-answer">
+          <option value="2">Select</option>
+          <option>Horses</option>
+          <option>Baby animals</option>
+          <option value="1">Fuzzy ones</option>
+        </select>
+
+        <h3>What's your opinion of the southern hemisphere?</h3>
+        <select class="form-control" id="answer">
+          <option value="2">Select</option>
+          <option>Love it!</option>
+          <option>Meh</option>
+          <option>Can't handle it. </option>
+        </select>
+
+        <h3>Do you like science?</h3>
+        <select class="form-control" id="answer">
+          <option value="2">Select</option>
+          <option>What is a science?</option>
+          <option>That was before my time.</option>
+          <option>I like turtles.</option>
+        </select>
+
+        <h3>Do you like feathers?</h3>
+        <select class="form-control" id="answer">
+          <option value="2">Select</option>
+          <option>18 or older</option>
+          <option>Yummers!</option>
+          <option>Under 18</option>
+        </select>
+
+        <button type="submit" class="btn btn-secondary" id="submit">Submit!</button>
+        </form>
+
+      </div>
+      <a class="answer1" href="./answer1.html">Your Muppet Mate!!</a>
+      <a class="answer2" href="./answer2.html">Your Muppet Mate!!</a>
+      <a class="answer3" href="./answer2.html">Your Muppet Mate!!</a>
+      <a class="answer4" href="./answer2.html">Your Muppet Mate!!</a>
+
+  </body>
+</html>
