--- a/index.html
+++ b/index.html
@@ -10,75 +10,57 @@
 
   <body>
       <div class="container">
-        <h1>Which programming track fits you?</h1>
+        <h1>Which programming track fits you best?</h1>
 
         <form id="user-input">
           <div class="form-group">
 
-        <h3>What fabric texture do you like?</h3>
+        <h3>Would you like to work with a powerful programming language to be able to build things like Android phone-based apps?</h3>
         <select class="form-control" id="answer">
           <option value="2">Select</option>
-          <option>Silk</option>
-          <option>Suede</option>
-          <option>Polyester</option>
+          <option>Yes</option>
+          <option>No</option>
         </select>
 
-        <h3>What type of demeanor do you like</h3>
+        <h3>Would you like the flexibility to be able to work in a wide range of formats ranging from desktop tool development to game development?</h3>
         <select class="form-control" id="answer">
           <option value="2">Select</option>
-          <option>Stern</option>
-          <option>Sweet</option>
-          <option>Unhinged</option>
+          <option>Yes</option>
+          <option>No</option>
         </select>
 
-        <h3>What kind of food do you like?</h3>
+        <h3>Whould you like to work primarily with how a website looks and interacts with the user?</h3>
         <select class="form-control" id="answer">
           <option value="2">Select</option>
-          <option>Pig slop</option>
-          <option>Gourmet vittles</option>
-          <option>Candy</option>
+          <option>Yes</option>
+          <option>No</option>
         </select>
 
-        <h3>What kind of animals do you like?</h3>
+        <h3>Whould you like to work largly with web-based content like government websites, social networks, and blogs?</h3>
         <select class="form-control" id="right-answer">
           <option value="2">Select</option>
           <option>Horses</option>
-          <option>Baby animals</option>
           <option value="1">Fuzzy ones</option>
         </select>
 
-        <h3>What's your opinion of the southern hemisphere?</h3>
+        <h3>Whould you like to work with a simple and flexible web framework that will require more skill as your project grows in complexity?</h3>
         <select class="form-control" id="answer">
           <option value="2">Select</option>
-          <option>Love it!</option>
-          <option>Meh</option>
-          <option>Can't handle it. </option>
+          <option>Yes</option>
+          <option>No</option>
         </select>
 
-        <h3>Do you like science?</h3>
-        <select class="form-control" id="answer">
-          <option value="2">Select</option>
-          <option>What is a science?</option>
-          <option>That was before my time.</option>
-          <option>I like turtles.</option>
-        </select>
 
-        <h3>Do you like feathers?</h3>
-        <select class="form-control" id="answer">
-          <option value="2">Select</option>
-          <option>18 or older</option>
-          <option>Yummers!</option>
-          <option>Under 18</option>
-        </select>
 
         <button type="submit" class="btn btn-secondary" id="submit">Submit!</button>
         </form>
 
       </div>
-      <a class="answer1" href="./answer1.html">Your Muppet Mate!!</a>
-      <a class="answer2" href="./answer2.html">Your Muppet Mate!!</a>
-      <a class="answer3" href="./answer2.html">Your Muppet Mate!!</a>
-      <a class="answer4" href="./answer2.html">Your Muppet Mate!!</a>
+      <a class="answer1" href="./javaandroid.html">Try this track!</a>
+      <a class="answer2" href="./c#net.html">Try this track!</a>
+      <a class="answer3" href="./design.html">Try this track!</a>
+      <a class="answer4" href="./phpdrupal.html">Try this track!</a>
+      <a class="answer5" href="./rubyrails.html">Try this track!</a>
 
   </body>
 </html>
