--- a/index.html
+++ b/index.html
@@ -9,58 +9,74 @@
   </head>
 
   <body>
-      <div class="container">
-        <h1>Which programming track fits you best?</h1>
+    <div class="container">
+
+      <h1>Which programming track fits you best?</h1>
 
         <form id="user-input">
           <div class="form-group">
 
         <h3>Would you like to work with a powerful programming language to be able to build things like Android phone-based apps?</h3>
-        <select class="form-control" id="answer">
-          <option value="2">Select</option>
-          <option>Yes</option>
-          <option>No</option>
+        <select class="form-control" id="submit">
+          <option value="3">Select</option>
+          <option value="1">Yes</option>
+          <option value="2">No</option>
         </select>
 
         <h3>Would you like the flexibility to be able to work in a wide range of formats ranging from desktop tool development to game development?</h3>
-        <select class="form-control" id="answer">
-          <option value="2">Select</option>
-          <option>Yes</option>
-          <option>No</option>
+        <select class="form-control" id="submit">
+        <option value="3">Select</option>
+          <option value="1">Yes</option>
+          <option value="2">No</option>
         </select>
 
         <h3>Whould you like to work primarily with how a website looks and interacts with the user?</h3>
-        <select class="form-control" id="answer">
-          <option value="2">Select</option>
-          <option>Yes</option>
-          <option>No</option>
+        <select class="form-control" id="submit">
+        <option value="3">Select</option>
+          <option value="1">Yes</option>
+          <option value="2">No</option>
         </select>
 
         <h3>Whould you like to work largly with web-based content like government websites, social networks, and blogs?</h3>
-        <select class="form-control" id="right-answer">
-          <option value="2">Select</option>
-          <option>Horses</option>
-          <option value="1">Fuzzy ones</option>
+        <select class="form-control" id="submit">
+        <option value="3">Select</option>
+          <option value="1">Yes</option>
+          <option value="2">No</option>
         </select>
 
         <h3>Whould you like to work with a simple and flexible web framework that will require more skill as your project grows in complexity?</h3>
-        <select class="form-control" id="answer">
-          <option value="2">Select</option>
-          <option>Yes</option>
-          <option>No</option>
+        <select class="form-control" id="submit">
+        <option value="3">Select</option>
+          <option value="1">Yes</option>
+          <option value="2">No</option>
         </select>
 
 
 
         <button type="submit" class="btn btn-secondary" id="submit">Submit!</button>
         </form>
+      </div>
+
+      <div id="java">
+        <h1>JAVA</h1>
+      </div>
+
+      <div id="csharp">
+        <h1>C#</h1>
+      </div>
+
+      <div id="design">
+        <h1>DESIGN</h1>
+      </div>
+
+      <div id="php">
+        <h1>PHP</h1>
+      </div>
+
+      <div id="ruby">
+        <h1>RUBY</h1>
 
       </div>
-      <a class="answer1" href="./javaandroid.html">Try this track!</a>
-      <a class="answer2" href="./c#net.html">Try this track!</a>
-      <a class="answer3" href="./design.html">Try this track!</a>
-      <a class="answer4" href="./phpdrupal.html">Try this track!</a>
-      <a class="answer5" href="./rubyrails.html">Try this track!</a>
 
   </body>
 </html>
