--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
@@ -13,43 +13,78 @@
 
       <h1>Which programming track fits you best?</h1>
 
-        <form id="user-input">
+        <form id="userInput">
           <div class="form-group">
 
         <h3>Would you like to work with a powerful programming language to be able to build things like Android phone-based apps?</h3>
-        <select class="form-control" id="submit">
-          <option value="3">Select</option>
-          <option value="1">Yes</option>
-          <option value="2">No</option>
-        </select>
+        <div class="radio" id="javaanswer">
+          <label>
+          <input type="radio" name="answer" value="Yes">
+          Yes
+          </label>
+        </div>
+        <div class="radio" id="javaanswer">
+            <label>
+            <input type="radio" name="answer" value="No">
+            No
+            </label>
+        </div>
 
         <h3>Would you like the flexibility to be able to work in a wide range of formats ranging from desktop tool development to game development?</h3>
-        <select class="form-control" id="submit">
-        <option value="3">Select</option>
-          <option value="1">Yes</option>
-          <option value="2">No</option>
-        </select>
+        <div class="radio" id="csharpanswer">
+          <label>
+          <input type="radio" name="answer" value="Yes">
+          Yes
+          </label>
+        </div>
+        <div class="radio" id="csharpanswer">
+            <label>
+            <input type="radio" name="answer" value="No">
+            No
+            </label>
+        </div>
 
         <h3>Whould you like to work primarily with how a website looks and interacts with the user?</h3>
-        <select class="form-control" id="submit">
-        <option value="3">Select</option>
-          <option value="1">Yes</option>
-          <option value="2">No</option>
-        </select>
+        <div class="radio" id="designanswer">
+          <label>
+          <input type="radio" name="answer" value="Yes">
+          Yes
+          </label>
+        </div>
+        <div class="radio" id="designanswer">
+            <label>
+            <input type="radio" name="answer" value="No">
+            No
+            </label>
+        </div>
 
         <h3>Whould you like to work largly with web-based content like government websites, social networks, and blogs?</h3>
-        <select class="form-control" id="submit">
-        <option value="3">Select</option>
-          <option value="1">Yes</option>
-          <option value="2">No</option>
-        </select>
+        <div class="radio" id="phpanswer">
+          <label>
+          <input type="radio" name="answer" value="Yes">
+          Yes
+          </label>
+        </div>
+        <div class="radio" id="phpanswer">
+            <label>
+            <input type="radio" name="answer" value="No">
+            No
+            </label>
+        </div>
 
         <h3>Whould you like to work with a simple and flexible web framework that will require more skill as your project grows in complexity?</h3>
-        <select class="form-control" id="submit">
-        <option value="3">Select</option>
-          <option value="1">Yes</option>
-          <option value="2">No</option>
-        </select>
+        <div class="radio" id="rubyanswer">
+          <label>
+          <input type="radio" name="answer" value="Yes">
+          Yes
+          </label>
+        </div>
+        <div class="radio" id="rubyanswer">
+            <label>
+            <input type="radio" name="answer" value="No">
+            No
+            </label>
+        </div>
 
 
 
@@ -75,7 +110,6 @@
 
       <div id="ruby">
         <h1>RUBY</h1>
-
       </div>
 
   </body>
