adjust button text

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <h3>Would you like to work with a powerful programming language to be able to build things like Android phone-based apps?</h3>
         <div class="radio" id="javaanswer">
           <label>
-          <input type="radio" name="answer" value="Yes">
+          <input type="radio" name="answer1" value="Yes">
           Yes
           </label>
         </div>
         <div class="radio" id="javaanswer">
             <label>
-            <input type="radio" name="answer" value="No">
+            <input type="radio" name="answer1" value="No">
             No
             </label>
         </div>
@@ -33,13 +33,13 @@
         <h3>Would you like the flexibility to be able to work in a wide range of formats ranging from desktop tool development to game development?</h3>
         <div class="radio" id="csharpanswer">
           <label>
-          <input type="radio" name="answer" value="Yes">
+          <input type="radio" name="answer2" value="Yes">
           Yes
           </label>
         </div>
         <div class="radio" id="csharpanswer">
             <label>
-            <input type="radio" name="answer" value="No">
+            <input type="radio" name="answer2" value="No">
             No
             </label>
         </div>
@@ -47,13 +47,13 @@
         <h3>Whould you like to work primarily with how a website looks and interacts with the user?</h3>
         <div class="radio" id="designanswer">
           <label>
-          <input type="radio" name="answer" value="Yes">
+          <input type="radio" name="answer3" value="Yes">
           Yes
           </label>
         </div>
         <div class="radio" id="designanswer">
             <label>
-            <input type="radio" name="answer" value="No">
+            <input type="radio" name="answer3" value="No">
             No
             </label>
         </div>
@@ -61,13 +61,13 @@
         <h3>Whould you like to work largly with web-based content like government websites, social networks, and blogs?</h3>
         <div class="radio" id="phpanswer">
           <label>
-          <input type="radio" name="answer" value="Yes">
+          <input type="radio" name="answer4" value="Yes">
           Yes
           </label>
         </div>
         <div class="radio" id="phpanswer">
             <label>
-            <input type="radio" name="answer" value="No">
+            <input type="radio" name="answer4" value="No">
             No
             </label>
         </div>
@@ -75,20 +75,20 @@
         <h3>Whould you like to work with a simple and flexible web framework that will require more skill as your project grows in complexity?</h3>
         <div class="radio" id="rubyanswer">
           <label>
-          <input type="radio" name="answer" value="Yes">
+          <input type="radio" name="answer5" value="Yes">
           Yes
           </label>
         </div>
         <div class="radio" id="rubyanswer">
             <label>
-            <input type="radio" name="answer" value="No">
+            <input type="radio" name="answer5" value="No">
             No
             </label>
         </div>
 
 
 
-        <button type="submit" class="btn btn-secondary" id="submit">Submit!</button>
+        <button type="submit" class="btn btn-secondary" id="submit">CLICK HERE!</button>
         </form>
       </div>
 
