--- a/index.html
+++ b/index.html
@@ -89,23 +89,33 @@
     </div>
 
     <div id="java">
-      <h1>JAVA</h1>
+      <h1><a href="https://www.epicodus.com/java">Java</a></h1>
+      <p>Java is also a favorite of enterprise companies, but its appeal is broader as well: it's one of the most popular of all programming languages, and it's used in everything from for high-performance processing to building Android user interfaces. Because Java has been very popular for a very long time and is used in so many applications, it is also a very high-demand language. If you're interested in working for an enterprise-level company, as an Android developer, or in high-performance applications, Java could be a good language to learn.</p>
+      <h3><a href="https://www.epicodus.com/java">Click here to learn more about Java and Epicodus.</a></h3>
     </div>
 
     <div id="csharp">
-      <h1>C#</h1>
+      <h1><a href="https://www.epicodus.com/c-sharp">C#</a></h1>
+      <p>C# is most popular among bigger established businesses, often for building internal software. Because it's been around for a long time and has the backing of Microsoft, it is one of the most in-demand languages in the job market. C# has also been going through a bit of a rebirth lately, with Microsoft open sourcing the language and surrounding platform, porting it to run on Mac and Linux, and incorporating many of the best features of other languages. If you like the idea of working for a larger company on business software, C# is a great choice.</p>
+      <h3><a href="https://www.epicodus.com/c-sharp">Click here to learn more about C# and Epicodus.</a></h3>
     </div>
 
     <div id="design">
-      <h1>DESIGN</h1>
+      <h1><a href="https://www.epicodus.com/design">Web Design</a></h1>
+      <p>Web design is a process of conceptualizing, planning, and building a collection of electronic files that determine the layout, colors, text styles, structure, graphics, images, and use of interactive features that deliver pages to your site visitors. Web Design is a crucial component in web development, and students who learn design will be able to engineer positive and interactive user experiences through innovative interfaces. </p>
+      <h3><a href="https://www.epicodus.com/design">Click here to learn more about web design and Epicodus.</a></h3>
     </div>
 
     <div id="php">
-      <h1>PHP</h1>
+      <h1><a href="https://www.epicodus.com/php">PHP</a></h1>
+      <p>PHP is by far the most popular backend language today, with 80 percent of websites utilizing it 'server-side'. It is perhaps best known for it's use in content management systems like Wordpress, Drupal, and Joomla. But the versatility of the language and the frameworks it powers make employment options numerous and diverse. If you're keen to work for a fast paced agency that builds websites for lots of clients, or maintain the security and stability of a huge complex of government websites, or if you like the idea of building out small sites for brands, businesses, and organizations - In any of these cases, PHP would be a great way to go.</p>
+      <h3><a href="https://www.epicodus.com/php">Click here to learn more about PHP and Epicodus.</a></h3>
     </div>
 
     <div id="ruby">
-      <h1>RUBY</h1>
+      <h1><a href="https://www.epicodus.com/ruby">Ruby</a></h1>
+      <p>Ruby is a favorite language of developers building interactive web applications. If an app involves users creating accounts, entering information, and interacting with dynamic content, there's a good chance it is built with Ruby. Ruby became popular because the Rails framework, which is written with Ruby, simplified many of the common tasks associated with building web applications. It's most popular with startups and smaller companies who are looking to build their product quickly.</p>
+      <h3><a href="https://www.epicodus.com/ruby">Click here to learn more about Ruby and Epicodus.</a></h3>
     </div>
 
   </body>
