--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </label>
         </div>
 
-        <h3>Whould you like to work primarily with how a website looks and interacts with the user?</h3>
+        <h3>Would you like to work primarily with how a website looks and interacts with the user?</h3>
         <div class="radio" id="designanswer">
           <label>
             <input type="radio" name="designanswer" value="Yes">
@@ -57,7 +57,7 @@
           </label>
         </div>
 
-        <h3>Whould you like to work largly with web-based content like government websites, social networks, and blogs?</h3>
+        <h3>Would you like to work largly with web-based content like government websites, social networks, and blogs?</h3>
         <div class="radio" id="phpanswer">
           <label>
             <input type="radio" name="phpanswer" value="Yes">
@@ -71,7 +71,7 @@
           </label>
         </div>
 
-        <h3>Whould you like to work with a simple and flexible web framework that will require more skill as your project grows in complexity?</h3>
+        <h3>Would you like to work with a simple and flexible web framework that will require more skill as your project grows in complexity?</h3>
         <div class="radio" id="rubyanswer">
           <label>
             <input type="radio" name="rubyanswer" value="Yes">
